# python-project-83

./: .env  .env.example  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  utils.py
page_analyzer/templates/: 404.html  base.html  index.html  sites.html  url_detail.html  url_info.html
page_analyzer/templates/components/: form.html  messages.html  navbar.html
